updated link to immersive showroom video

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <div id="buttons">
         <button class="button" onclick="location.href='http://bowere-demo-with-people.s3-website-us-east-1.amazonaws.com/';">Small showroom</button>
-        <button class="button" onclick="location.href='http://bowere-demo-web-version.s3-website-us-east-1.amazonaws.com/'">Immersive Showroom</button>
+        <button class="button" onclick="location.href='http://bowere-demo-web-video.s3-website-us-east-1.amazonaws.com/'">Immersive Showroom</button>
         <button class="button" onclick="location.href='http://bowere-supermarket.s3-website.us-east-2.amazonaws.com/';">Immersive Store</button>
     </div>    
   </div> 
