specified web demo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top">BOWERE DEMOS</h1>
+    <h1 class="w3-jumbo w3-animate-top">BOWERE WEB-DEMOS</h1>
     
     <div id="buttons">
         <button class="button" onclick="location.href='http://bowere-demo-with-people.s3-website-us-east-1.amazonaws.com/';">Small showroom</button>
